--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.zepben</groupId>
+			<artifactId>annotations</artifactId>
+			<version>1.3.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zepben</groupId>
+			<artifactId>zepben-utils</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
